plugins {
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
    id 'maven-publish'
}

version = mod_version
group = maven_group

base { archivesName = archives_base_name }

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: mappings_channel, version: mappings_version
    runs {
        client { workingDirectory project.file('run'); property 'forge.logging.console.level', 'debug'; mods { subtlyd { source sourceSets.main } } }
        server { workingDirectory project.file('run'); property 'forge.logging.console.level', 'debug'; mods { subtlyd { source sourceSets.main } } }
        data  { workingDirectory project.file('run'); property 'forge.logging.console.level', 'debug'; args '--mod', 'subtlyd', '--all', '--output', file('src/generated/resources/'); mods { subtlyd { source sourceSets.main } } }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories { mavenCentral() }

dependencies {
<<<<<<< Updated upstream
    minecraft "com.mojang:minecraft:${project.minecraft_version}"

    implementation "net.fabricmc:fabric-loader:${project.loader_version}"

    implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

}

loom {
    accessWidenerPath = file("src/main/resources/subtlyd.classtweaker")

    runConfigs.configureEach {
        jvmArguments.add("--enable-native-access=ALL-UNNAMED")
    }
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": inputs.properties.version
    }
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 25
}

java {
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
=======
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
>>>>>>> Stashed changes
}

jar {
    manifest { attributes(['Specification-Title': 'subtlyd', 'Specification-Vendor': 'Meander Studios', 'Specification-Version': '1', 'Implementation-Title': project.name, 'Implementation-Version': project.version, 'Implementation-Vendor': 'Meander Studios']) }
    from('LICENSE') { rename { "${it}_${archives_base_name}" } }
}

publishing {
<<<<<<< Updated upstream
    publications {
        create("mavenJava", MavenPublication) {
            artifactId = project.archives_base_name
            from components.java
        }
    }
}

tasks.withType(AbstractCopyTask).configureEach {
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
}

sourceSets {
    main {
        resources {
            srcDirs += [
                    'src/main/generated'
            ]
        }
    }
}
=======
    publications { mavenJava(MavenPublication) { artifact jar } }
    repositories { maven { url "file://${project.projectDir}/mcmodsrepo" } }
}
>>>>>>> Stashed changes
